# locoloco

./: .gitignore  README.md
actuators_pico/: Cargo.toml
common_pico/: Cargo.toml
common_pico/src/: lib.rs
loco_controller/: Cargo.toml
loco_controller/src/: backend.rs  main.rs  oracle.rs  rail_network.rs
loco_pico/: Cargo.toml  rust-toolchain.toml
loco_pico/.cargo/: config.toml
loco_protocol/: Cargo.toml
loco_protocol/src/: lib.rs
sensors_pico/: Cargo.toml
udev_rules/: 99-rp-pico2w.rules
