[package]
name = "actuators_pico"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[[bin]]
name = "actuators_pico"
test = false
bench = false

[dependencies]
bincode = { version = "2.0", default-features = false }
common_pico = { path = "../common_pico" }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
defmt = "0.3"
defmt-rtt = "0.4"
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "6c6ae4f9fca1eaff6cb9f2896de333d9493ea840", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-net = { git = "https://github.com/embassy-rs/embassy.git", rev = "6c6ae4f9fca1eaff6cb9f2896de333d9493ea840", features = ["defmt", "tcp", "udp", "raw", "dhcpv4", "medium-ethernet", "dns"] }
embassy-rp = { git = "https://github.com/embassy-rs/embassy.git", rev = "6c6ae4f9fca1eaff6cb9f2896de333d9493ea840", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "6c6ae4f9fca1eaff6cb9f2896de333d9493ea840", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy.git", rev = "6c6ae4f9fca1eaff6cb9f2896de333d9493ea840" }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
loco_protocol = { path = "../loco_protocol" }
log = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[profile.release]
debug = 2

[profile.dev]
lto = true
opt-level = "z"