[package]
name = "loco_controller"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
bincode = { version = "2.0", features = ["derive", "std"] }
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"